[workspace]

members = [
    "bem",
    "element",
    "fmm",
    "field",
    "grid",
    "hyksort",
    "quadrature",
    "tools",
    "tree",
    "kernel",
    "traits",
]

resolver = "2"

default-members = [
    "bem",
    "element",
    "fmm",
    "field",
    "grid",
    "hyksort",
    "quadrature",
    "tools",
    "tree",
    "kernel",
    "traits",
]


[workspace.lints.clippy]
wildcard_imports = "forbid"
