[features]
mpi = ["dep:mpi"]
strict = []

[package]
name = "bempp"
version = "0.1.0"
edition = "2021"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>", "Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "Boundary element method library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp"
crate-type = ["lib", "cdylib"]

[dependencies]
approx = "0.5"
cauchy = "0.4.*"
itertools = "0.12.*"
mpi = { version = "0.7.*", optional = true }
num = "0.4"
paste = "1.*"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
rayon = "1.9"
rand = "0.8.5"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
green-kernels = { git = "https://github.com/bempp/green-kernels.git" }
thiserror="1.*"

[dev-dependencies]
criterion = { version = "0.5.*", features = ["html_reports"]}
kifmm = { git = "https://github.com/bempp/kifmm.git" }

[[bench]]
name = "assembly_benchmark"
harness = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"

[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.10", features = ["accelerate"]}
lapack-src = { version = "0.10", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.10", features = ["blis"]}
lapack-src = { version = "0.10", features = ["netlib"]}
