[features]
mpi = ["dep:mpi", "ndelement/mpi", "ndgrid/mpi"]
sleef = ["rlst/sleef", "green-kernels/sleef"]
strict = []
default = ["sleef"]

[package]
name = "bempp"
version = "0.1.0-dev"
edition = "2021"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>", "Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "Boundary element method library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp"
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.13.*"
mpi = { version = "0.8.*", optional = true }
num = "0.4"
lazy_static = "1.4"
ndelement = "0.1.1"
ndgrid = "0.1.1"
rayon = "1.9"
rlst = { version = "0.2.0", default-features = false }
green-kernels = { version = "0.2.2", default-features = false }

[dev-dependencies]
approx = "0.5"
paste = "1.*"
cauchy = "0.4.*"
criterion = { version = "0.5.*", features = ["html_reports"]}
# kifmm = { version = "1.0" }

[build-dependencies]
cbindgen = "0.27.0"

[[bench]]
name = "assembly_benchmark"
harness = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"
