[features]
mpi = ["dep:mpi"]
strict = []

[package]
name = "bempp-bem"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <matthew.w.scroggs@gmail.com>"]
description = "Boundary element method library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_bem"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits"}
bempp-element = { path = "../element"}
bempp-grid = { path = "../grid"}
bempp-kernel = { path = "../kernel"}
bempp-quadrature = { path = "../quadrature"}
bempp-tree = { path = "../tree"}
bempp-fmm = { path = "../fmm"}
bempp-field = { path = "../field"}
approx = "0.5"
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
num = "0.4"
rayon = "1.7"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-blis-src = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-sparse = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-common = { git = "https://github.com/linalg-rs/rlst.git" }
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "assembly_benchmark"
harness = false

