[features]
mpi = ["dep:mpi"]
strict = []

[package]
name = "bempp-bem"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "Boundary element method library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_bem"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits"}
bempp-element = { path = "../element"}
bempp-grid = { path = "../grid"}
bempp-kernel = { path = "../kernel"}
bempp-quadrature = { path = "../quadrature"}
bempp-tree = { path = "../tree"}
bempp-fmm = { path = "../fmm"}
bempp-field = { path = "../field"}
approx = "0.5"
cauchy = "0.4.*"
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
num = "0.4"
paste = "1.*"
rayon = "1.9"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "assembly_benchmark"
harness = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.9", features = ["accelerate"]}
lapack-src = { version = "0.9", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.9", features = ["blis"]}
lapack-src = { version = "0.9", features = ["netlib"]}

