[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-element"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <matthew.w.scroggs@gmail.com>"]
description = "A library that can define and evaluate finite element basis functions."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_element"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits" }
bempp-quadrature = { path = "../quadrature" }
paste = "1.*"
libc = "0.2"
approx = "0.5"
rlst = { git = "https://github.com/linalg-rs/rlst.git@mscroggs/rsmpi-0.7.0" }
rlst-blis-src = { git = "https://github.com/linalg-rs/rlst.git@mscroggs/rsmpi-0.7.0" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git@mscroggs/rsmpi-0.7.0" }
rlst-algorithms = { git = "https://github.com/linalg-rs/rlst.git@mscroggs/rsmpi-0.7.0" }

