[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-element"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "A library that can define and evaluate finite element basis functions."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_element"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits" }
bempp-quadrature = { path = "../quadrature" }
paste = "1.*"
libc = "0.2"
approx = "0.5"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-blis-src = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git" }
num = "0.4"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
