[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-field"
version = "0.1.0"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "A multipole-to-local (M2L) field translation library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_field"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-traits = { path = "../traits" }
bempp-tree = { path = "../tree" }
bempp-kernel = { path = "../kernel" }
bempp-tools = { path = "../tools" }
itertools = "0.10"
# ndarray = { version = "*", features = ["blas"]}
# ndarray-linalg = { version = "*", features = ["openblas-system"] }
# ndarray-ndimage = "0.3.0"
# ndrustfft = "0.4.0"
num = "0.4"
rlst = {git = "https://github.com/skailasa/rlst.git", branch = "enh/moore-penrose-pseudo-inverse"}
realfft = "3.3.0"
rustfft = "6.1.0"
fftw = {git = "https://github.com/skailasa/fftw.git" } 
cauchy = "0.4.0"
dashmap = {version = "5.5.0", features=["rayon"]}
rayon = "1.7.0"

[dev-dependencies]
approx_eq = "0.1.8"
