[features]
# Treat warnings as a build error.
strict = []
avx = []
neon = []

[package]
name = "bempp-field"
version = "0.1.0"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "A multipole-to-local (M2L) field translation library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_field"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-traits = { path = "../traits" }
bempp-tree = { path = "../tree" }
bempp-kernel = { path = "../kernel" }
bempp-tools = { path = "../tools" }
itertools = "0.10"
num = "0.4"
rlst = { git = "https://github.com/linalg-rs/rlst.git" , rev="d0cf6cb77332a1e8320f84abedfe387357e6feb4"}
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git", rev="d0cf6cb77332a1e8320f84abedfe387357e6feb4" }
rlst-blis = { git = "https://github.com/linalg-rs/rlst.git" , rev="d0cf6cb77332a1e8320f84abedfe387357e6feb4"}
fftw = {git = "https://github.com/skailasa/fftw.git" }
cauchy = "0.4.*"
approx = "0.5"
rayon = "1.7"

[dev-dependencies]
approx_eq = "0.1.8"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true
