[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-fmm"
version = "0.1.0"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "A fast multipole method (FMM) library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_fmm"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools" }
bempp-tree = { path = "../tree" }
bempp-traits = { path = "../traits" }
bempp-field = { path = "../field" }
bempp-kernel = { path = "../kernel" }
approx = "0.5"
cauchy = "0.4.*"
itertools = "0.10"
mpi = { version = "0.6.*" }
rand = "0.8.*"
ndarray = { version = "*", features = ["blas"]}
ndarray-rand = "0.14.0"
blas-src = { version = "*", features = ["openblas"] }
openblas-src = { version = "*", features = ["cblas", "system"] }
ndarray-linalg = { version = "*", features = ["openblas-system"] }
float-cmp = "0.9.0"
rayon = "1.7"
num_cpus = "1"
ndrustfft = "0.4.0"
num = "0.4"
ndarray-ndimage = "0.3.0"
rlst = {git = "https://github.com/skailasa/rlst.git", branch = "enh/moore-penrose-pseudo-inverse" }

[target.aarch64-apple-darwin]
rustflags = [  "-C", "target-feature=+neon"]
