[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-fmm"
version = "0.1.0"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "A fast multipole method (FMM) library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_fmm"
crate-type = ["lib", "cdylib"]
bench = false

[dependencies]
bempp-tools = { path = "../tools" }
bempp-tree = { path = "../tree" }
bempp-traits = { path = "../traits" }
bempp-field = { path = "../field" }
bempp-kernel = { path = "../kernel" }
approx = "0.5"
cauchy = "0.4.*"
itertools = "0.10"
mpi = { version = "0.6.*" }
rand = "0.8.*"
float-cmp = "0.9.0"
num_cpus = "1"
num = "0.4"
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-blis = { git = "https://github.com/linalg-rs/rlst.git" }
fftw = { git = "https://github.com/skailasa/fftw.git" }
rayon = "1.7"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "single_node"
harness = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "single_node_laplace"
path = "examples/single_node_laplace.rs"
