[features]
strict = []
slice-static-tables = []

[lib]
proc-macro = true

[package]
name = "bempp-generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bempp-tools = { path = "../tools" }
bempp-traits = { path = "../traits" }
bempp-element = { path = "../element" }
bempp-bem = { path = "../bem" }
bempp-grid = { path = "../grid" }
bempp-quadrature = { path = "../quadrature" }
quote = { version = "1.0" }
syn = { version = "2.0.22" }
num = "0.4"
approx = "0.5"

[build-dependencies]
rustversion = "1.0"
