[features]
mpi = ["dep:mpi"]
strict = []

[package]
name = "bempp-grid"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <matthew.w.scroggs@gmail.com>"]
description = "A finite element grid library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_grid"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits"}
bempp-element = { path = "../element"}
approx = "0.5"
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
rlst-common = { git = "https://github.com/linalg-rs/rlst.git", branch="tensor" }
rlst-proc-macro = { git = "https://github.com/linalg-rs/rlst.git", branch="tensor" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git", branch="tensor" }
