[features]
mpi = ["dep:mpi"]
strict = []

[package]
name = "bempp-grid"
version = "0.1.0"
edition = "2021"
authors = ["Timo Betcke", "Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "A finite element grid library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_grid"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits"}
bempp-element = { path = "../element"}
bempp-quadrature = { path = "../quadrature" }
approx = "0.5"
num = "0.4"
log = "0.4"
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
rlst-proc-macro = { git = "https://github.com/linalg-rs/rlst.git" }
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git" }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name="flat_triangle_grid"
doc-scrape-examples = true
