[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Timo Betcke <timo.betcke@gmail.com>"]
description = "Evaluation of Green's function kernels."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_kernel"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits" }
paste = "1.*"
libc = "0.2"
approx = { version = "0.5", features = ["num-complex"] }
rayon = "1.9"
num = "0.4"
num_cpus = "1"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
rand = "0.8.5"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true


[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.9", features = ["accelerate"]}
lapack-src = { version = "0.9", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.9", features = ["blis"]}
lapack-src = { version = "0.9", features = ["netlib"]}

