[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Timo Betcke <timo.betcke@gmail.com>"]
description = "Evaluation of Green's function kernels."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_kernel"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-tools = { path = "../tools"}
bempp-traits = { path = "../traits" }
paste = "1.*"
libc = "0.2"
approx = { version = "0.5", features = ["num-complex"] }
rayon = "1.9"
num = "0.4"
num_cpus = "1"
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git", rev="d0cf6cb77332a1e8320f84abedfe387357e6feb4" }
rlst = { git = "https://github.com/linalg-rs/rlst.git", rev="d0cf6cb77332a1e8320f84abedfe387357e6feb4" }
rand = "0.8.5"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true
