[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-quadrature"
version = "0.0.1"
authors = ["Timo Betcke"]
edition = "2021"
description = "A quadrature library for boundary element computations."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_quadrature"
crate-type = ["lib", "cdylib"]

[dependencies]
bempp-traits = {path = "../traits"}
lazy_static = "1.4"
paste = "1.*"
approx = "0.5"
itertools = "0.10"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true


[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.9", features = ["accelerate"]}
lapack-src = { version = "0.9", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.9", features = ["blis"]}
lapack-src = { version = "0.9", features = ["netlib"]}

