[package]
name = "solvers-tools"
version = "0.0.2"
authors = ["Timo Betcke"]
edition = "2021"
description = "Tools for the rusty-solvers libraries."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-solvers/solvers"
repository = "https://github.com/rusty-solvers/solvers"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "solvers_tools"
crate-type = ["lib", "cdylib"]

[dependencies]
libc = "0.2"
num = "0.4"
