[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-tools"
version = "0.0.2"
authors = ["Timo Betcke"]
edition = "2021"
description = "Tools for the bempp-rs libraries."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_tools"
crate-type = ["lib", "cdylib"]

[dependencies]
libc = "0.2"
num = "0.4"
