[features]
# Treat warnings as a build error.
strict = []

[package]
name = "bempp-traits"
version = "0.0.1"
authors = ["Timo Betcke"]
edition = "2021"
description = "Traits for all bempp components."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_traits"
crate-type = ["lib", "cdylib"]

[dependencies]
cauchy="0.4.*"
thiserror="1.*"
bempp-tools = { path = "../tools"}
