[features]
strict = []

[package]
name = "bempp-traits"
version = "0.0.1"
authors = ["Timo Betcke", "Srinath Kailasa <srinathkailasa@gmail.com>", "Matthew Scroggs <rust@mscroggs.co.uk>"]
edition = "2021"
description = "Traits for all bempp components."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_traits"
crate-type = ["lib", "cdylib"]

[dependencies]
cauchy="0.4.*"
thiserror="1.*"
num = "0.4"
rlst-dense = { git = "https://github.com/linalg-rs/rlst.git", rev="d0cf6cb" }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true
