[package]
name = "solvers-tree"
version = "1.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2021"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/solvers-tree"
repository = "https://github.com/rusty-fast-solvers/solvers-tree"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "solvers_tree"
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
memoffset = "0.6"
rand = "0.8.*"
hyksort = { path = "../hyksort", optional = true }
solvers-traits = { path = "../traits" }

[features]
mpi = ["dep:mpi", "dep:hyksort"]