[package]
name = "bempp-tree"
version = "1.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2021"
description = "Octree data structures in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/bempp-rs"
repository = "https://github.com/bempp/bempp-rs"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_tree"
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.10"
mpi = { version = "0.6.*", optional = true }
memoffset = "0.6"
rand = "0.8.*"
hyksort = { path = "../hyksort", optional = true }
bempp-traits = { path = "../traits" }

[features]
mpi = ["dep:mpi", "dep:hyksort"]
strict = []

[dev-dependencies]
rlst = {git = "https://github.com/skailasa/rlst.git", branch = "enh/moore-penrose-pseudo-inverse"}